html files Updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,16 @@
           <div class="portfolio-h1">
             <h1>Portfolio</h1>
           </div>
+
             <div class="frame">
+              <img src="assets/images/Back-End.png" alt="img1" />
+            </div>
+            <div class="frame">
+              <img src="assets/images/Front-End.png" alt="img2" />
+            </div>
+            <div class="frame">
+              <img src="assets/images/MERN-Stack.jpeg" alt="img3" />
+            </div>
             <div class="frame">
               <img src="assets/images/Client-Server.png" alt="img4" />
             </div>
@@ -35,10 +44,12 @@
               <img src="assets/images/MEAN-Stack.png " alt="img5" />
             </div>
 
-        </div>
       </div>
     </div>
 
     <footer>Copyright</footer>
   </body>
 </html>
+
+
+assets/images/MEAN-Stack.png
